--- a/QT_Test/demo.ui
+++ b/QT_Test/demo.ui
@@ -41,14 +41,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QListView" name="listView_3">
-         <property name="minimumSize">
-          <size>
-           <width>200</width>
-           <height>0</height>
-          </size>
-         </property>
-        </widget>
+        <widget class="QListWidget" name="scroll_list_L"/>
        </item>
       </layout>
      </item>
@@ -62,14 +55,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QListView" name="listView_2">
-         <property name="minimumSize">
-          <size>
-           <width>200</width>
-           <height>0</height>
-          </size>
-         </property>
-        </widget>
+        <widget class="QListWidget" name="scroll_list_R"/>
        </item>
       </layout>
      </item>
@@ -89,9 +75,9 @@
         </spacer>
        </item>
        <item>
-        <widget class="QPushButton" name="btn_add">
+        <widget class="QPushButton" name="btn_addBone">
          <property name="text">
-          <string>Add</string>
+          <string>Add Bone</string>
          </property>
         </widget>
        </item>
