--- a/QT_Test/demo.ui
+++ b/QT_Test/demo.ui
@@ -82,6 +82,13 @@
         </widget>
        </item>
        <item>
+        <widget class="QPushButton" name="btn_addCtrl">
+         <property name="text">
+          <string>Add CTRL</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <spacer name="verticalSpacer_3">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
