--- a/FK_Controller_Tool/FK_Controller_Tool.ui
+++ b/FK_Controller_Tool/FK_Controller_Tool.ui
@@ -148,6 +148,20 @@
         </spacer>
        </item>
        <item>
+        <widget class="QPushButton" name="btn_saveCSV">
+         <property name="text">
+          <string>Save CSV</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btn_loadCSV">
+         <property name="text">
+          <string>Load CSV</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
